...
                        modifier = Modifier.padding(horizontal = 5.dp)
                    )
                }

                OutlinedButton(
                    onClick = { expanded = !expanded },
                    modifier = Modifier.padding(horizontal = 5.dp).testTag("showRepetitionSeriesContent")
                ) {
                    Text(text = if (!expanded) "Pokaż" else "Ukryj", color = Smola)
                }

            }

...

        item {
            RowTextFieldElement(
                elementName = "Nazwa ćwiczenia",
                element = exerciseName,
                onElementChange = { exerciseName = it },
                modifier = Modifier.testTag("repetitionExerciseNameEditText")
            )
        }

        item {
            RowTextFieldElement(
                elementName = "Ilość serii(liczba)",
                element = numberOfSeries,
                onElementChange = { numberOfSeries = it },
                modifier = Modifier.testTag("repetitionExerciseNumberOfSeriesEditText")
            )
        }

        item {
            RowTextFieldElement(
                elementName = "Przerwa między seriami(sekundy)",
                element = breakBetweenSeries,
                onElementChange = { breakBetweenSeries = it },
                modifier = Modifier.testTag("repetitionExerciseBreakBetweenSeriesEditText")
            )
        }

        item {
            RowTextFieldElement(
                elementName = "Liczba powtórzeń w serii",
                element = numberOfReps,
                onElementChange = { numberOfReps = it },
                modifier = Modifier.testTag("repetitionExerciseNumberOfRepsEditText")
            )
        }

        item {
            RowCheckBoxElement(
                elementName = "Czy zatrzymać czas po serii?",
...
                            )
                            isClicked = true
                        } else {
                            Toast.makeText(context, "Popraw dane", Toast.LENGTH_SHORT).show()
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("createRepetitionExerciseButton"),
                    colors = ButtonDefaults.buttonColors(containerColor = InsideLevel2)
                ) {
                    Text(text = "Dodaj serię", color = Smola)
                }
            }
        }
...
                    )
                }


                OutlinedButton(
                    onClick = { expanded = !expanded },
                    modifier = Modifier.padding(horizontal = 5.dp).testTag("showTimeSeriesContent")
                ) {
                    Text(text = if (!expanded) "Pokaż" else "Ukryj", color = Smola)
                }

            }

...
    Column {

        RowTextFieldElement(
            elementName = "Nazwa ćwiczenia",
            element = exerciseName,
            onElementChange = { exerciseName = it },
            modifier = Modifier.testTag("timeExerciseNameEditText")
        )
        RowTextFieldElement(
            elementName = "Ilość serii(liczba)",
            element = numberOfSeries,
            onElementChange = { numberOfSeries = it },
            modifier = Modifier.testTag("timeExerciseNumberOfSeriesEditText")
        )
        RowTextFieldElement(
            elementName = "Czas dla serii(sekundy)",
            element = timeForSeries,
            onElementChange = { timeForSeries = it },
            modifier = Modifier.testTag("timeExerciseTimeForSeriesEditText")
        )
        RowTextFieldElement(
            elementName = "Przerwa między seriami(sekundy)",
            element = breakBetweenSeries,
            onElementChange = { breakBetweenSeries = it },
            modifier = Modifier.testTag("timeExerciseBreakBetweenSeriesEditText")
        )
        RowExposedDropdownMenuBox(
            elementName = "Pozycja dla ćwiczenia",
            element = exercisePositionInTraining,
            onElementChange = { exercisePositionInTraining = it },
            numberOfExercise = numberOfExercise
...
                    isClicked = true
//                    navController.navigate("training/${trainingName}/${trainingId}")
                } else {
                    Toast.makeText(context, "Popraw dane", Toast.LENGTH_SHORT).show()
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("createTimeExerciseButton"),
            colors = ButtonDefaults.buttonColors(containerColor = InsideLevel2)
        ) {
            Text(text = "Dodaj serię", color = Smola)
        }
    }
}
...
