package pl.matiu.kalistenika.testTags

val TRAINING_NAME_IN_ADD_TRAINING_SCREEN_TEST_TAG = "TRAINING_NAME_IN_ADD_TRAINING_SCREEN_TEST_TAG"
val ACCEPT_BUTTON_IN_ADD_TRAINING_SCREEN_TEST_TAG = "ACCEPT_BUTTON_IN_ADD_TRAINING_SCREEN_TEST_TAG"