...
    backStack: NavBackStack<NavKey>
) {
    when (dialogResponse) {
        is DialogResponse.CreateTrainingDialog -> CreateTrainingDialog(
            showDialog = showDialog,
            onShowDialogChange = { onShowDialogChange(!showDialog) },
            DialogValues(title = "Create Dialog"),
            context = LocalContext.current
        )

        is DialogResponse.EditTimeTrainingDialog -> EditTrainingDialog(
            showDialog,
            { onShowDialogChange(!showDialog) },
...
